fix: Use only small positive offsets - NO overlap, NO proximity to info text

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,60 +157,60 @@ body {
     transition: transform 0.4s ease;
 }
 
-/* Beautiful gallery wall - smart offsets respecting natural flow */
+/* Gallery wall - safe small offsets, no overlap */
 .painting-item:nth-child(1) {
     margin-top: 0;
 }
 .painting-item:nth-child(2) {
-    margin-top: -80px;
+    margin-top: 25px;
 }
 .painting-item:nth-child(3) {
-    margin-top: 40px;
+    margin-top: 0;
 }
 .painting-item:nth-child(4) {
-    margin-top: -120px;
-}
-.painting-item:nth-child(5) {
-    margin-top: 60px;
-}
-.painting-item:nth-child(6) {
-    margin-top: -90px;
-}
-.painting-item:nth-child(7) {
-    margin-top: 50px;
-}
-.painting-item:nth-child(8) {
-    margin-top: -110px;
-}
-.painting-item:nth-child(9) {
-    margin-top: 70px;
-}
-.painting-item:nth-child(10) {
-    margin-top: -100px;
-}
-.painting-item:nth-child(11) {
     margin-top: 30px;
 }
+.painting-item:nth-child(5) {
+    margin-top: 15px;
+}
+.painting-item:nth-child(6) {
+    margin-top: 0;
+}
+.painting-item:nth-child(7) {
+    margin-top: 35px;
+}
+.painting-item:nth-child(8) {
+    margin-top: 20px;
+}
+.painting-item:nth-child(9) {
+    margin-top: 0;
+}
+.painting-item:nth-child(10) {
+    margin-top: 40px;
+}
+.painting-item:nth-child(11) {
+    margin-top: 10px;
+}
 .painting-item:nth-child(12) {
-    margin-top: -85px;
+    margin-top: 0;
 }
 .painting-item:nth-child(13) {
-    margin-top: 55px;
+    margin-top: 28px;
 }
 .painting-item:nth-child(14) {
-    margin-top: -95px;
+    margin-top: 18px;
 }
 .painting-item:nth-child(15) {
-    margin-top: 45px;
+    margin-top: 0;
 }
 .painting-item:nth-child(16) {
-    margin-top: -105px;
+    margin-top: 33px;
 }
 .painting-item:nth-child(17) {
-    margin-top: 65px;
+    margin-top: 22px;
 }
 .painting-item:nth-child(18) {
-    margin-top: -75px;
+    margin-top: 0;
 }
 
 @keyframes fadeInScale {
